Add GraphQL flow

--- a/server/src/BLogic.EzAdmin.Core/BLogic.EzAdmin.Core.fsproj
+++ b/server/src/BLogic.EzAdmin.Core/BLogic.EzAdmin.Core.fsproj
@@ -4,4 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Include="Converters\OptionConverter.fs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
+
 </Project>
