--- a/server/src/BLogic.EzAdmin.Domain/BLogic.EzAdmin.Domain.fsproj
+++ b/server/src/BLogic.EzAdmin.Domain/BLogic.EzAdmin.Domain.fsproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Include="Schema\Schema.fs" />
+    <Compile Include="GraphQL\UnsafeGraphQLQuery.fs" />
+  </ItemGroup>
+
 </Project>
