Add SchemaRepository and QueryHandler

--- a/server/src/BLogic.EzAdmin.Data/BLogic.EzAdmin.Data.fsproj
+++ b/server/src/BLogic.EzAdmin.Data/BLogic.EzAdmin.Data.fsproj
@@ -4,4 +4,19 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Include="QueryHandler.fs" />
+    <Compile Include="Schemas\SchemaRepository.fs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="1.50.5" />
+    <PackageReference Include="FSharp.Data.Dapper" Version="2.0.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.5.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BLogic.EzAdmin.Domain\BLogic.EzAdmin.Domain.fsproj" />
+  </ItemGroup>
+
 </Project>
