--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-cache-inmemory": "^1.2.10",
+    "apollo-client": "^2.4.2",
+    "apollo-link": "^1.2.3",
+    "apollo-link-error": "^1.1.1",
+    "apollo-link-http": "^1.5.5",
+    "graphql": "^14.0.2",
+    "graphql-tag": "^2.9.2",
     "react": "^16.5.2",
+    "react-apollo": "^2.1.11",
     "react-dom": "^16.5.2",
     "react-scripts-ts": "2.17.0"
   },
@@ -18,11 +26,12 @@
     "generate-types": "apollo-codegen generate \"./src/graphql/**/*.ts\" --schema \"./src/generated-types/schema.json\" --target typescript --output \"./src/generated-types/types.ts\" --addTypename"
   },
   "devDependencies": {
+    "@types/graphql": "^14.0.1",
     "@types/jest": "^23.3.2",
     "@types/node": "^10.11.0",
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
-    "apollo-codegen": "^0.20.2",
+    "apollo-codegen": "^0.19.0",
     "typescript": "^3.0.3"
   }
 }
