--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "react-grid-system": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "2.17.0",
-    "semantic-ui-react": "^0.82.5"
+    "semantic-ui-react": "^0.82.5",
+    "styled-components": "^3.4.9"
   },
   "scripts": {
     "dev": "yarn codegen && yarn start",
