--- a/server/src/BLogic.EzAdmin.Data/BLogic.EzAdmin.Data.fsproj
+++ b/server/src/BLogic.EzAdmin.Data/BLogic.EzAdmin.Data.fsproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Compile Include="QueryHandler.fs" />
+    <Compile Include="Repositories\SqlTypes\SqlReferenceRepository.fs" />
     <Compile Include="Repositories\SqlTypes\SqlTypeRepository.fs" />
   </ItemGroup>
 
