--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -3,5 +3,6 @@
     "statusBar.background": "#9d02e5d6",
     "statusBar.noFolderBackground": "#9d02e5d6",
     "statusBar.debuggingBackground": "#9d02e5d6"
-  }
+  },
+  "typescript.tsdk": "node_modules\\typescript\\lib"
 }
