--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/react-router-dom": "^4.3.1",
     "apollo-cache-inmemory": "^1.2.10",
     "apollo-client": "^2.4.2",
     "apollo-link": "^1.2.3",
@@ -11,6 +10,7 @@
     "apollo-link-http": "^1.5.5",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.9.2",
+    "ramda": "^0.25.0",
     "react": "^16.5.2",
     "react-apollo": "^2.1.11",
     "react-dom": "^16.5.2",
@@ -34,8 +34,10 @@
     "@types/graphql": "^14.0.1",
     "@types/jest": "^23.3.2",
     "@types/node": "^10.11.0",
+    "@types/ramda": "^0.25.38",
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
+    "@types/react-router-dom": "^4.3.1",
     "apollo-codegen": "^0.19.0",
     "typescript": "^3.1.1"
   }
