--- a/server/src/BLogic.EzAdmin.Core/BLogic.EzAdmin.Core.fsproj
+++ b/server/src/BLogic.EzAdmin.Core/BLogic.EzAdmin.Core.fsproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Utils\Utils.fs" />
     <Compile Include="Services\SqlTypes\SqlTypeService.fs" />
+    <Compile Include="Converters\InputTypeConverter.fs" />
     <Compile Include="Converters\OptionConverter.fs" />
   </ItemGroup>
 
