Refactor GraphQL types

--- a/server/src/BLogic.EzAdmin.GraphQL/BLogic.EzAdmin.GraphQL.fsproj
+++ b/server/src/BLogic.EzAdmin.GraphQL/BLogic.EzAdmin.GraphQL.fsproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="QueryGraphQLTypes.fs" />
+    <Compile Include="InputGraphQLTypes.fs" />
     <Compile Include="GraphQLSchema.fs" />
     <Compile Include="QueryProcessor.fs" />
   </ItemGroup>
