Add first squccessfull psudodynamic query

--- a/server/src/BLogic.EzAdmin.Core/BLogic.EzAdmin.Core.fsproj
+++ b/server/src/BLogic.EzAdmin.Core/BLogic.EzAdmin.Core.fsproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Engines\Engine.fs" />
     <Compile Include="Utils\Utils.fs" />
     <Compile Include="Services\SqlTypes\SqlTypeService.fs" />
     <Compile Include="Converters\InputTypeConverter.fs" />
