--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,7 @@
     "react-dom": "^16.5.2",
     "react-grid-system": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts-ts": "2.17.0",
+    "react-scripts-ts": "^3.1.0",
     "semantic-ui-react": "^0.82.5",
     "styled-components": "^3.4.9"
   },
