--- a/client/package.json
+++ b/client/package.json
@@ -3,22 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-cache-inmemory": "^1.2.10",
-    "apollo-client": "^2.4.2",
+    "@types/styled-components": "^4.0.3",
+    "apollo-cache-inmemory": "^1.3.9",
+    "apollo-client": "^2.4.5",
     "apollo-link": "^1.2.3",
     "apollo-link-error": "^1.1.1",
     "apollo-link-http": "^1.5.5",
     "graphql": "^14.0.2",
-    "graphql-tag": "^2.9.2",
+    "graphql-tag": "^2.10.0",
     "ramda": "^0.25.0",
-    "react": "^16.5.2",
+    "react": "^16.6.1",
     "react-apollo": "^2.2.4",
-    "react-dom": "^16.5.2",
+    "react-dom": "^16.6.1",
     "react-grid-system": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "^3.1.0",
-    "semantic-ui-react": "^0.82.5",
-    "styled-components": "^3.4.9"
+    "semantic-ui-react": "^0.83.0",
+    "styled-components": "^4.1.0"
   },
   "scripts": {
     "dev": "yarn codegen && yarn start",
@@ -31,14 +32,14 @@
     "generate-types": "apollo-codegen generate \"./src/graphql/**/*.ts\" --schema \"./src/domain/generated/schema.json\" --target typescript --output \"./src/domain/generated/types.ts\" --addTypename"
   },
   "devDependencies": {
-    "@types/graphql": "^14.0.1",
+    "@types/graphql": "^14.0.3",
     "@types/jest": "^23.3.2",
-    "@types/node": "^10.11.0",
-    "@types/ramda": "^0.25.38",
-    "@types/react": "^16.4.14",
-    "@types/react-dom": "^16.0.7",
+    "@types/node": "^10.12.5",
+    "@types/ramda": "^0.25.41",
+    "@types/react": "^16.7.3",
+    "@types/react-dom": "^16.0.9",
     "@types/react-router-dom": "^4.3.1",
     "apollo-codegen": "^0.19.0",
-    "typescript": "^3.1.1"
+    "typescript": "^3.1.6"
   }
 }
