--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "apollo-cache-inmemory": "^1.3.9",
     "apollo-client": "^2.4.5",
     "apollo-link": "^1.2.3",
+    "apollo-link-context": "^1.0.9",
     "apollo-link-error": "^1.1.1",
     "apollo-link-http": "^1.5.5",
     "graphql": "^14.0.2",
