--- a/server/src/BLogic.EzAdmin.Core/BLogic.EzAdmin.Core.fsproj
+++ b/server/src/BLogic.EzAdmin.Core/BLogic.EzAdmin.Core.fsproj
@@ -9,12 +9,14 @@
     <Compile Include="Engines\AppPreviewTransformer.fs" />
     <Compile Include="Engines\Engine.fs" />
     <Compile Include="Utils\Utils.fs" />
+    <Compile Include="Services\Security\TokenService.fs" />
     <Compile Include="Services\SqlTypes\SqlTypeService.fs" />
     <Compile Include="Converters\OptionConverter.fs" />
     <Compile Include="Converters\InputTypeConverter.fs" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="JWT" Version="4.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
