Update server side packages

--- a/server/src/BLogic.EzAdmin.Api/BLogic.EzAdmin.Api.fsproj
+++ b/server/src/BLogic.EzAdmin.Api/BLogic.EzAdmin.Api.fsproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\BLogic.EzAdmin.GraphQL\BLogic.EzAdmin.GraphQL.fsproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="4.5.4" />
+  </ItemGroup>
+
 </Project>
