--- a/server/src/BLogic.EzAdmin.Domain/BLogic.EzAdmin.Domain.fsproj
+++ b/server/src/BLogic.EzAdmin.Domain/BLogic.EzAdmin.Domain.fsproj
@@ -19,4 +19,8 @@
     <PackageReference Include="MongoDB.Driver" Version="2.7.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="4.5.4" />
+  </ItemGroup>
+
 </Project>
