--- a/server/src/BLogic.EzAdmin.Api/Properties/launchSettings.json
+++ b/server/src/BLogic.EzAdmin.Api/Properties/launchSettings.json
@@ -3,16 +3,14 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:7930",
+      "applicationUrl": "http://localhost:12355/",
       "sslPort": 0
     }
   },
-  "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "graphiql",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,11 +18,10 @@
     "BLogic.EzAdmin.Api": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "graphiql",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "http://localhost:12356/"
     }
   }
 }
