Add process of page save

--- a/server/src/BLogic.EzAdmin.Core/BLogic.EzAdmin.Core.fsproj
+++ b/server/src/BLogic.EzAdmin.Core/BLogic.EzAdmin.Core.fsproj
@@ -6,9 +6,10 @@
 
   <ItemGroup>
     <Compile Include="Engines\DescriptionConverter.fs" />
-    <Compile Include="Engines\AppPreviewTransformer.fs" />
+    <Compile Include="Engines\AppInputTransformer.fs" />
     <Compile Include="Engines\Engine.fs" />
     <Compile Include="Utils\Utils.fs" />
+    <Compile Include="Services\Application\ApplicationService.fs" />
     <Compile Include="Services\Security\TokenService.fs" />
     <Compile Include="Services\SqlTypes\SqlTypeService.fs" />
     <Compile Include="Converters\OptionConverter.fs" />
