--- a/server/src/BLogic.EzAdmin.Data/BLogic.EzAdmin.Data.fsproj
+++ b/server/src/BLogic.EzAdmin.Data/BLogic.EzAdmin.Data.fsproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Compile Include="ConnectionProvider.fs" />
+    <Compile Include="Engines\ColumnAliasProvider.fs" />
     <Compile Include="Engines\DynamicQueryBuilder.fs" />
     <Compile Include="Engines\EngineRepository.fs" />
     <Compile Include="Core\MongoHandler.fs" />
