--- a/server/src/BLogic.EzAdmin.Api/BLogic.EzAdmin.Api.fsproj
+++ b/server/src/BLogic.EzAdmin.Api/BLogic.EzAdmin.Api.fsproj
@@ -14,6 +14,7 @@
     <PackageReference Include="GraphiQL" Version="1.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.*" />
     <PackageReference Include="Giraffe" Version="3.4.*" />
+    <PackageReference Include="NamelessInteractive.FSharp.MongoDB" Version="0.0.4" />
     <PackageReference Include="TaskBuilder.fs" Version="2.1.*" />
   </ItemGroup>
 
