--- a/server/src/BLogic.EzAdmin.Domain/BLogic.EzAdmin.Domain.fsproj
+++ b/server/src/BLogic.EzAdmin.Domain/BLogic.EzAdmin.Domain.fsproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Users\User.fs" />
     <Compile Include="Ui\UiTypes.fs" />
     <Compile Include="Schemas\SchemaTypes.fs" />
     <Compile Include="Engines\EngineTypes.fs" />
