--- a/client/package.json
+++ b/client/package.json
@@ -25,12 +25,12 @@
     "yup": "^0.26.10"
   },
   "scripts": {
-    "dev": "yarn codegen && yarn start",
+    "dev": "yarn gql && yarn start",
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
-    "codegen": "yarn get-schema && yarn generate-types",
+    "gql": "yarn get-schema && yarn generate-types",
     "get-schema": "apollo schema:download --endpoint http://localhost:12355/graphql/ \"./src/domain/generated/schema.json\"",
     "generate-types": "apollo client:codegen --includes=\"./src/graphql/**/*.ts\" --localSchemaFile=\"./src/domain/generated/schema.json\" --target=typescript --addTypename --outputFlat \"./src/domain/generated/types.ts\" "
   },
