Add AppID and SetAppID

--- a/server/src/BLogic.EzAdmin.Core/BLogic.EzAdmin.Core.fsproj
+++ b/server/src/BLogic.EzAdmin.Core/BLogic.EzAdmin.Core.fsproj
@@ -9,12 +9,13 @@
     <Compile Include="Engines\AppInputTransformer.fs" />
     <Compile Include="Engines\Engine.fs" />
     <Compile Include="Utils\Utils.fs" />
+    <Compile Include="Converters\OptionConverter.fs" />
+    <Compile Include="Converters\InputTypeConverter.fs" />
+    <Compile Include="Converters\Settings.fs" />
     <Compile Include="Services\UserService\UserService.fs" />
     <Compile Include="Services\Application\ApplicationService.fs" />
     <Compile Include="Services\Security\TokenService.fs" />
     <Compile Include="Services\SqlTypes\SqlTypeService.fs" />
-    <Compile Include="Converters\OptionConverter.fs" />
-    <Compile Include="Converters\InputTypeConverter.fs" />
   </ItemGroup>
 
   <ItemGroup>
