--- a/server/src/BLogic.EzAdmin.Application/BLogic.EzAdmin.Application.fsproj
+++ b/server/src/BLogic.EzAdmin.Application/BLogic.EzAdmin.Application.fsproj
@@ -5,6 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Models\AppModels.fs" />
+    <Compile Include="Security\SecurityAppService.fs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BLogic.EzAdmin.Core\BLogic.EzAdmin.Core.fsproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Update="FSharp.Core" Version="4.5.4" />
   </ItemGroup>
 
