--- a/server/src/BLogic.EzAdmin.Application/BLogic.EzAdmin.Application/BLogic.EzAdmin.Application.fsproj
+++ b/server/src/BLogic.EzAdmin.Application/BLogic.EzAdmin.Application/BLogic.EzAdmin.Application.fsproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <Compile Include="Models\AppModels.fs" />
     <Compile Include="Security\SecurityAppService.fs" />
+    <Compile Include="Schemas\SchemaAppService.fs" />
     <Compile Include="SqlTypes\SqlTypesAppService.fs" />
   </ItemGroup>
 
