Append preview to existing app

--- a/server/src/BLogic.EzAdmin.Application/BLogic.EzAdmin.Application/BLogic.EzAdmin.Application.fsproj
+++ b/server/src/BLogic.EzAdmin.Application/BLogic.EzAdmin.Application/BLogic.EzAdmin.Application.fsproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Compile Include="Models\AppModels.fs" />
+    <Compile Include="Engines\EngineAppService.fs" />
     <Compile Include="Security\SecurityAppService.fs" />
     <Compile Include="Schemas\SchemaAppService.fs" />
     <Compile Include="SqlTypes\SqlTypesAppService.fs" />
