--- a/client/package.json
+++ b/client/package.json
@@ -39,11 +39,14 @@
     "typescript": "3.4.4"
   },
   "scripts": {
-    "dev": "yarn start",
+    "dev": "yarn gql && yarn start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "gql": "yarn get-schema && yarn generate-types",
+    "get-schema": "apollo schema:download --endpoint http://localhost:12355/graphql/ \"./src/domain/generated/schema.json\"",
+    "generate-types": "apollo client:codegen --includes=\"./src/graphql/**/*.ts\" --localSchemaFile=\"./src/domain/generated/schema.json\" --target=typescript --addTypename --outputFlat \"./src/domain/generated/types.ts\" "
   },
   "eslintConfig": {
     "extends": "react-app"
