--- a/client/package.json
+++ b/client/package.json
@@ -20,16 +20,17 @@
     "react-grid-system": "^4.4.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
+    "react-toastify": "^5.1.0",
     "semantic-ui-react": "^0.85.0",
     "styled-components": "^4.1.3",
     "yup": "^0.26.10"
   },
   "devDependencies": {
     "@types/graphql": "^14.0.5",
-    "@types/lodash": "^4.14.120",
-    "@types/ramda": "^0.25.48",
     "@types/jest": "24.0.11",
+    "@types/lodash": "^4.14.120",
     "@types/node": "11.13.5",
+    "@types/ramda": "^0.25.48",
     "@types/react": "16.8.14",
     "@types/react-dom": "16.8.4",
     "@types/react-router-dom": "^4.3.1",
