--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "apollo-link-context": "^1.0.17",
     "apollo-link-error": "^1.1.10",
     "apollo-link-http": "^1.5.14",
-    "formik": "^1.5.0",
+    "formik": "^1.5.2",
     "graphql": "^14.2.1",
     "graphql-tag": "^2.10.1",
     "lodash": "^4.17.11",
@@ -17,25 +17,25 @@
     "react": "^16.8.6",
     "react-apollo": "^2.5.4",
     "react-dom": "^16.8.6",
-    "react-grid-system": "^4.4.2",
-    "react-router-dom": "^4.3.1",
+    "react-grid-system": "^4.4.5",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-toastify": "^5.1.0",
-    "semantic-ui-react": "^0.85.0",
-    "styled-components": "^4.1.3",
-    "yup": "^0.26.10"
+    "semantic-ui-react": "^0.86.0",
+    "styled-components": "^4.2.0",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "@types/graphql": "^14.2.0",
     "@types/jest": "24.0.11",
-    "@types/lodash": "^4.14.120",
-    "@types/node": "11.13.5",
-    "@types/ramda": "^0.25.48",
+    "@types/lodash": "^4.14.123",
+    "@types/node": "^11.13.6",
+    "@types/ramda": "^0.26.7",
     "@types/react": "16.8.14",
     "@types/react-dom": "16.8.4",
-    "@types/react-router-dom": "^4.3.1",
-    "@types/styled-components": "^4.1.8",
-    "@types/yup": "^0.26.9",
+    "@types/react-router-dom": "^4.3.2",
+    "@types/styled-components": "^4.1.14",
+    "@types/yup": "^0.26.12",
     "apollo": "^2.8.3",
     "typescript": "3.4.4"
   },
